syntax error changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <!-- nav box -->
+            <!-- navigation box -->
             <nav> 
                 <ul>
                     <!-- image on left of nav bar --> 
@@ -17,8 +17,7 @@
                     <li><p>Nav Item 3</p></li>
                     <li><p>Nav Item 4</p></li>
                 </ul>
-            </nav>
-            <!-- end nav box-->       
+            </nav>      
         </header>
 
         <main>
@@ -45,7 +44,6 @@
             </section>
         </main>
         <footer>
-            <!-- long grey box, no image -->
         </footer>
     </body>
 </html>
